updated form elements 16px font minimum to prevent auto zoom on mobile

--- a/src/components/ModalWithForm/ModalWithForm.css
+++ b/src/components/ModalWithForm/ModalWithForm.css
@@ -66,7 +66,7 @@
 .modal__label {
   display: flex;
   flex-direction: column;
-  font-size: px;
+  font-size: 16px;
   color: #333;
   border-bottom: 1px solid black;
 }
